@@ -56,6 +56,7 @@ Version 1.3-svn:
    * units now have leveling up animations
    * [event]s can now be written also inside [era]s (the [event]s are included
      in every scenario played using that era)
+   * new operation for set_variable : divide
  * multiplayer game management
    * client now tells the server if a game ended in victory or defeat
    * configurable castle size for random map generator (patch #598, FR #3232)
